@@ -6,6 +6,10 @@
 
 0.19.* UPDATES
 --------------------------------------------------------------------------------
+12: Added --eqx option to minimap steps, as the "assert(has_cigar + no_cigar == 1);" test failed sometimes
+11: Now I write down the mock to insilico mapping rates
+10: Changed the index for Mock vs insilico to bai from csi, as csi threw an error for the mock reference
+9: Adjusted the file paths to the log file
 8: Mock reference is now also aligned against the different in-silico predictions
 7: Removed the previous additions and started an own similarity metric script instead.
 6: Added the mock to reference similarity step, using MUMmer
